Restore modifiable collection